kubernetes/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: database
