kubernetes/ingress-bk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-backend
spec:
  ingressClassName: nginx
  rules:
  - host: knowledge.backend.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 443
